--- a/src/components/HomePage/styles.css
+++ b/src/components/HomePage/styles.css
@@ -1,13 +1,21 @@
 .header-container {
     display: flex;
-    justify-content: space-between;
     align-items: center;
 
     width: 100%;
     height: 88px;
-    padding: 32px 260px;
+    padding: 32px 0px;
     
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.header-container > div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    width: 982px;
+    margin: 0 auto;
 }
 
 .main-container {
@@ -17,3 +25,39 @@
     margin: 39px auto;
     width: 982px;
 }
+
+@media (max-width: 1000px) {
+    .header-container > div {
+        width: 90%;
+    }
+
+    .main-container {
+        width: 90%;
+        justify-content: space-between;
+    }
+}
+
+@media (max-width: 930px) {
+    .main-container {
+        flex-direction: column;
+    }
+
+    .financial-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+}
+
+@media (max-width: 815px) {
+    .financial-container {
+        flex-direction: column;
+        margin-bottom: 40px;
+    }
+}
+
+@media (max-width: 500px) {
+    .main-container {
+        margin: 30px auto;
+    }
+}   
