--- a/src/components/TotalValue/styles.css
+++ b/src/components/TotalValue/styles.css
@@ -34,3 +34,9 @@
     font-size: 12px;
     color: #343A40;
 }
+
+@media (max-width: 500px) {
+    .total-value-container {
+        width: 100%;
+    }
+}   
