--- a/src/components/IndexPage/styles.css
+++ b/src/components/IndexPage/styles.css
@@ -70,10 +70,19 @@
   height: 100%;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1100px) {
+  .container {
+    justify-content: space-around;
+  }
   .img-indexPage {
-    width: 60%;
+    width: 50%;
     height: 80%;
+  }
+}
+
+@media (max-width: 950px) {
+  .img-indexPage {
+    width: 35%;
   }
 }
 
